change social icons, add cursor pointer, fix news overlap

--- a/packages/common/src/css/components/Modal.css
+++ b/packages/common/src/css/components/Modal.css
@@ -55,6 +55,7 @@
     border: 0;
     font-weight: bold;
     align-self: flex-end;
+    cursor: pointer;
   }
 }
 
