--- a/packages/website/src/components/Button/Button.css
+++ b/packages/website/src/components/Button/Button.css
@@ -10,6 +10,7 @@
   line-height: 1rem;
   margin-bottom: 0.5em;
   border-radius: 4px;
+  cursor: pointer;
 
   &--legacy {
     color: #ffffff !important;
